<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zeynep.cozcozdurapp.MainActivity">


    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="136dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/sifre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/email"
        android:layout_below="@+id/email"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/sifre"
        android:inputType="textEmailAddress" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/girisyap"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp">

    </com.google.android.gms.common.SignInButton>

    <Button
        android:id="@+id/girisyap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sifre"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/girisyap" />

</RelativeLayout>
