<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostActivity">

    <ImageButton
        android:id="@+id/imageSelect"
        android:layout_width="355dp"
        android:layout_height="224dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        app:srcCompat="@mipmap/addphoto"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="6dp" />

    <EditText
        android:id="@+id/titleField"
        android:layout_width="351dp"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="193dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_outline"
        android:ems="10"
        android:hint="@string/posttitle"
        android:inputType="textPersonName"
        android:paddingLeft="5dp" />

    <EditText
        android:id="@+id/descField"
        android:layout_width="345dp"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="144dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/input_outline"
        android:ems="10"
        android:hint="@string/postdesc"
        android:inputType="textMultiLine"
        android:paddingLeft="5dp" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/purple"
        android:text="@string/sendpost" />

</RelativeLayout>